tests/ui/image/query/query_size_err.stderr
error[E0277]: the trait bound `Image<f32, 1, 2, 0, 0, 1, 0, 4, ImageAccessUnknown>: HasQuerySize` is not satisfied
   --> $DIR/query_size_err.rs:12:21
    |
12  |     *output = image.query_size();
    |                     ^^^^^^^^^^ the trait `HasQuerySize` is not implemented for `Image<f32, 1, 2, 0, 0, 1, 0, 4, ImageAccessUnknown>`
    |
    = help: the following other types implement trait `HasQuerySize`:
              Image<SampledType, 0, DEPTH, ARRAYED, 0, 0, FORMAT, COMPONENTS, Access>
              Image<SampledType, 0, DEPTH, ARRAYED, 0, 2, FORMAT, COMPONENTS, Access>
              Image<SampledType, 0, DEPTH, ARRAYED, 1, SAMPLED, FORMAT, COMPONENTS, Access>
              Image<SampledType, 1, DEPTH, ARRAYED, 0, 0, FORMAT, COMPONENTS, Access>
              Image<SampledType, 1, DEPTH, ARRAYED, 0, 2, FORMAT, COMPONENTS, Access>
              Image<SampledType, 1, DEPTH, ARRAYED, 1, SAMPLED, FORMAT, COMPONENTS, Access>
              Image<SampledType, 2, DEPTH, ARRAYED, 0, 0, FORMAT, COMPONENTS, Access>
              Image<SampledType, 2, DEPTH, ARRAYED, 0, 2, FORMAT, COMPONENTS, Access>
            and 6 others
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>::query_size`
   --> $SPIRV_STD_SRC/image.rs:958:15
    |
956 |     pub fn query_size<Size: ImageCoordinate<u32, DIM, ARRAYED> + Default>(&self) -> Size
    |            ---------- required by a bound in this associated function
957 |     where
958 |         Self: HasQuerySize,
    |               ^^^^^^^^^^^^ required by this bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS, Access>::query_size`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
